feat: delete and update user route
